part5/5.02/manifests/nats-config.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    # config.linkerd.io/opaque-ports: "4222"
    config.linkerd.io/skip-outbound-ports: "4222"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{"config.linkerd.io/opaque-ports":"4222"},"creationTimestamp":"2024-08-10T16:48:09Z","generation":5,"labels":{"app.kubernetes.io/component":"nats","app.kubernetes.io/instance":"my-nats","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"nats","app.kubernetes.io/version":"2.10.17","helm.sh/chart":"nats-1.2.1"},"name":"my-nats","namespace":"default","resourceVersion":"59527","uid":"ba868e74-764b-4aed-802d-d88 [...]
  creationTimestamp: "2024-08-10T16:48:09Z"
  generation: 6
  labels:
    app.kubernetes.io/component: nats
    app.kubernetes.io/instance: my-nats
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nats
    app.kubernetes.io/version: 2.10.17
    helm.sh/chart: nats-1.2.1
  name: my-nats
  namespace: default
  resourceVersion: "60327"
  uid: ba868e74-764b-4aed-802d-d882339f2d6a
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: nats
      app.kubernetes.io/instance: my-nats
      app.kubernetes.io/name: nats
  serviceName: my-nats-headless
  template:
    metadata:
      annotations:
        checksum/config: 2c9c2b17e3c73548794b2327cc6aa7d96931245ed79343a74f940acf71488403
        config.linkerd.io/opaque-ports: "4222"
        kubectl.kubernetes.io/restartedAt: "2024-08-10T16:58:28-03:00"
      creationTimestamp: null
      labels:
        app.kubernetes.io/component: nats
        app.kubernetes.io/instance: my-nats
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nats
        app.kubernetes.io/version: 2.10.17
        helm.sh/chart: nats-1.2.1
    spec:
      containers:
      - args:
        - --config
        - /etc/nats-config/nats.conf
        image: nats:2.10.17-alpine
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - nats-server
              - -sl=ldm=/var/run/nats/nats.pid
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz?js-enabled-only=true
            port: monitor
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: nats
        ports:
        - containerPort: 4222
          name: nats
          protocol: TCP
        - containerPort: 8222
          name: monitor
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz?js-server-only=true
            port: monitor
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        startupProbe:
          failureThreshold: 90
          httpGet:
            path: /healthz
            port: monitor
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/nats-config
          name: config
        - mountPath: /var/run/nats
          name: pid
      - args:
        - -pid
        - /var/run/nats/nats.pid
        - -config
        - /etc/nats-config/nats.conf
        image: natsio/nats-server-config-reloader:0.15.0
        imagePullPolicy: IfNotPresent
        name: reloader
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/run/nats
          name: pid
        - mountPath: /etc/nats-config
          name: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: true
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: my-nats-config
        name: config
      - emptyDir: {}
        name: pid
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 1
  collisionCount: 0
  currentReplicas: 1
  currentRevision: my-nats-775c9646d
  observedGeneration: 6
  readyReplicas: 1
  replicas: 1
  updateRevision: my-nats-775c9646d
  updatedReplicas: 1
