part5/5.02/manifests/broadcaster.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
  annotations:
    config.linkerd.io/skip-outbound-ports: "4222"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      annotations:
        config.linkerd.io/skip-outbound-ports: "4222"
      labels:
        app: broadcaster
    spec:
      containers:
      - name: todo-go-broadcaster
        image: djblackett/todo-go-broadcaster:69a467cbaea9a29b1f6f0631bd07797b2b626805
        ports:
        - containerPort: 8500
        resources:
          requests:
            cpu: "50m"
            memory: "50Mi"
          limits:
            cpu: "200m"
            memory: "200Mi"
        readinessProbe:
          initialDelaySeconds: 10 # Initial delay until the readiness is tested
          periodSeconds: 5 # How often to test
          httpGet:
            path: /healthz
            port: 8500
        livenessProbe:
          initialDelaySeconds: 20 # Initial delay until the liveness is tested
          periodSeconds: 5 # How often to test
          httpGet:
            path: /healthz
            port: 8500

---
apiVersion: v1
kind: Service
metadata:
  name: broadcaster-svc
spec:
  type: ClusterIP
  selector:
    app: broadcaster
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 8500
