part5/5.02/manifests/frontend.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-go-frontend
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: todo-go-frontend
  template:
    metadata:
      labels:
        app: todo-go-frontend
    spec:
      containers:
      - name: todo-go-frontend
        image: djblackett/todo-go-frontend:3cc08bff91121c0c5ce663f0c849f16d9d1ed9c2
        resources:
          requests:
            cpu: "5m"
            memory: "5Mi"
          limits:
            cpu: "20m"
            memory: "20Mi"
        volumeMounts:
        readinessProbe:
          initialDelaySeconds: 10 # Initial delay until the readiness is tested
          periodSeconds: 5 # How often to test
          httpGet:
            path: /healthz
            port: 8080
        livenessProbe:
          initialDelaySeconds: 20 # Initial delay until the liveness is tested
          periodSeconds: 5 # How often to test
          httpGet:
            path: /healthz
            port: 8080

      volumes:
      - name: config
        configMap:
          name: web-config
          items:
          - key: "web.properties"
            path: "config.js"

---
apiVersion: v1
kind: Service
metadata:
  name: todo-go-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-go-frontend # This is the app as declared in the deployment.
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 8080
